# ema-template

./: .envrc  .ghcid  .gitattributes  .gitignore  CHANGELOG.md  CNAME  Procfile  README.md  about.html  cabal.project  concepts.html  dir1.html  dir2.html  ema-docs.cabal  ema-template.cabal  flake.nix  guide.html  hie.yaml  index.html  justfile  start.html  tailwind.css  treefmt.toml
.github/workflows/: publish.yaml
concepts/: cli.html  haskell-safety.html  hot-reload.html  logging.html  lvar.html  slug.html  sse.html
content/: concepts.md  dir1.md  dir2.md  guide.md  index.md  start.md  tailwind.css
content/concepts/: cli.md  hot-reload.md  logging.md  lvar.md  slug.md
content/dir1/: foo.md
content/dir2/: bar.md
content/guide/: class.md  helpers.md  model.md  render.md  routes.md  tailwind.md
content/guide/helpers/: filesystem.md  markdown.md  tailwind.md
content/start/: tutorial.md
dir1/: foo.html
dir2/: bar.html
ema-template/: .ghcid  ema-template.cabal
ema-template/static/: tailwind.css
guide/: class.html  filesystem.html  helpers.html  markdown.html  model.html  render.html  routes.html  tailwind.html
guide/helpers/: filesystem.html  markdown.html  tailwind.html
nix/modules/flake/: devshell.nix  haskell.nix  packages.nix  pre-commit.nix
src/: Main.hs
src/Site/: MarkdownSite.hs  StaticSite.hs
start/: basic-site.html  tutorial.html
static/: tailwind.css
